fixed z-index of image enlarge modal to show the tools at the top (#137)

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -87,3 +87,8 @@ table tr.totalline {
 }
 
 /* below will eventually go in the theme extentions.scss*/
+
+// enlarge image modal zindex to be on top of the AD and below the side menu
+.p-image-mask {
+  z-index: 5010 !important;
+}
